Correct text around final application deadlines.
Remove some text that references extending project deadlines.
Clarify when we mean final application deadline vs initial application
deadline.

--- a/home/templates/home/dashboard/email/mentor-application-deadline-reminder.html
+++ b/home/templates/home/dashboard/email/mentor-application-deadline-reminder.html
@@ -1,1 +1,1 @@
-<p>You'll need to send a reminder email to mentors who have an approved project to let them know about the application deadline, and to give them instructions on how to help applicants complete the timeline.</p>
+<p>You'll need to send a reminder email to mentors who have an approved project to let them know about the final application deadline, and to give them instructions on how to help applicants complete the timeline.</p>
