--- a/home/templates/home/project_applicants.html
+++ b/home/templates/home/project_applicants.html
@@ -129,7 +129,7 @@ that timeline, taking into account any time commitments the applicant has.
 			<div class="card-header text-white bg-warning">No Interns Available</div>
 			<div class="card-body">
 				<p class="card-text">
-				None of the applicants for this project created an application, and your project's application deadline has passed. You cannot select an intern who has not created an application.
+				None of the applicants for this project created an application, and the final application deadline has passed. You cannot select an intern who has not created an application.
 				</p>
 			</div>
 		</div>
