--- a/home/templates/home/project_contributions.html
+++ b/home/templates/home/project_contributions.html
@@ -114,15 +114,15 @@
 	{% if final_application %}
 		{% if not current_round.contributions_close.has_passed %}
 			<h3>Editing Your Final Application</h3>
-			<p>You'll be able to edit your application until the application deadline has passed.
+			<p>You'll be able to edit your application until the final application deadline has passed.
 			The "Save" button makes the latest version of your application visible to Outreachy mentors and coordinators.
 			Saving your application effectively submits it. There is no specific "Submit" option.
 		{% else %}
 			<h3>View Your Final Application</h3>
-			<p>The application deadline for this project has now passed, and your application is final and cannot be edited.
-			Your application will be considered for this internship project.
+			<p>The final application deadline has now passed, and your final application cannot be edited.
+			Your final application will be considered for this internship project.
 		{% endif %}
-		If you wish to withdraw your application, there is a button at the bottom of your application to do so.<p>
+		If you wish to withdraw your final application, there is a button at the bottom of your application to do so.<p>
 
 		<p>After the final application deadline ({{ current_round.contributions_close }})
 		project mentors will take a couple weeks to decide who they want to accept as an intern.
@@ -131,16 +131,16 @@
 		The Outreachy organizers may also need time to seek out additional funding to have organizations accept more interns.
 		</p>
 		<p>
-		Applicants typically don't get any email from organizers after the application deadline has passed.
+		Applicants typically don't get any email from organizers after the final application deadline has passed.
 		Some applicants may get email to clarify their time commitments.
 		Even if you don't receive an email, all applications in the system after the deadline will be reviewed.
 		</p>
 
 		<p>
-		After the application deadline and before the interns are announced,
+		After the final application deadline and before the interns are announced,
 		you are welcome to continue making contributions to the projects you applied for.
 		We find that applicants often become passionate about their project, and get hooked on making contributions.
-		Many applicants who are selected for internships continue working past the application deadline, although it is not required.
+		Many applicants who are selected for internships continue working past the final application deadline, although it is not required.
 		You can continue to record contributions interns are announced.
 		</p>
 
