--- a/home/templates/home/round_page_with_communities.html
+++ b/home/templates/home/round_page_with_communities.html
@@ -16,7 +16,7 @@ Outreachy Internships | Apply | Pick a Project
 				<p class="card-text">
 				The Outreachy application period is now closed.
 				You can <a href="https://lists.outreachy.org/cgi-bin/mailman/listinfo/announce">sign up for the announcements mailing list</a>
-				to get an email when applications open.
+				to get an email when initial applications open.
 				</p>
 				<p class="card-text">
 				Outreachy intern selections for the {{ previous_round.official_name }}
@@ -167,7 +167,7 @@ Outreachy Internships | Apply | Pick a Project
 		<h2>Closed Early - Outreachy Internship Projects</h2>
 		<p>
 		The following projects were closed to new applicants before
-		the application deadline of {{ current_round.contributions_close }} at 4pm UTC.
+		the final application deadline of {{ current_round.contributions_close }} at 4pm UTC.
 		This typically means the mentors were working with many promising
 		applicants early in the application period. In future rounds,
 		applicants should make sure to start their contributions early
