--- a/home/templates/home/snippet/eligibility_prompts.html
+++ b/home/templates/home/snippet/eligibility_prompts.html
@@ -192,8 +192,8 @@
 									<li><a href="{{ p.get_contributions_url }}">Record your contributions</a></li>
 									<li><a href="{{ p.get_contributions_url }}">View your final application</a></li>
 								{% else %}
-									<li>The project deadline has passed, and since you have not submitted a final application,
-										you are not eligible to be selected as an intern for this project.</li>
+									<li>The final application deadline has passed. You have not submitted a final application,
+										so you are not eligible to be selected as an intern for this project.</li>
 									<li><a href="{{ p.get_contributions_url }}">View your contributions</a></li>
 								{% endif %}
 								<li><a href="{{ p.project_round.get_absolute_url }}">View project information</a></li>
