--- a/home/templates/home/dashboard/email/deadline-review.html
+++ b/home/templates/home/dashboard/email/deadline-review.html
@@ -1,3 +1,3 @@
-<p>Two weeks before the application deadline, project mentors are either overloaded with applicants,
+<p>Two weeks before the final application deadline, project mentors are either overloaded with applicants,
 or don't have enough applicants. Send a reminder email to close their project to new applicants
 if necessary.</p>
