--- a/home/templates/home/dashboard/email/mentor-intern-selection-reminder.html
+++ b/home/templates/home/dashboard/email/mentor-intern-selection-reminder.html
@@ -1,5 +1,5 @@
-<p>Once the contribution period has passed, email mentors to tell them to select their intern:
+<p>Once the contribution period has ended, email mentors to tell them to select their intern:
 <ul>
-	<li>After the first application period deadline. Send the email on {{ due }} after 4pm UTC.</li>
+	<li>After the final application deadline. Send the email on {{ due }} after 4pm UTC.</li>
 </ul>
 </p>
