Clarify various deadline wording

--- a/home/templates/home/snippet/deadline_passed.html
+++ b/home/templates/home/snippet/deadline_passed.html
@@ -1,5 +1,5 @@
 <p>
-The final application deadline for <a href="/apply/project-selection">Outreachy projects</a> has passed.
+The deadline to create a final application for <a href="/apply/project-selection">Outreachy projects</a> has passed.
 We are no longer accepting final applications for internships, and you did not submit a final application.
 We encourage you to sign up for the
 <a href="https://lists.outreachy.org/cgi-bin/mailman/listinfo/announce">announcements mailing list</a>
