--- a/home/templates/home/project_contributions.html
+++ b/home/templates/home/project_contributions.html
@@ -124,7 +124,7 @@
 		{% endif %}
 		If you wish to withdraw your final application, there is a button at the bottom of your application to do so.<p>
 
-		<p>After the final application deadline ({{ current_round.contributions_close }})
+		<p>After the final application deadline ({{ current_round.contributions_close }} at 4pm UTC)
 		project mentors will take a couple weeks to decide who they want to accept as an intern.
 		They will review all applications in the application system,
 		and communicate their intern selection to Outreachy organizers.
