Remove reference to project deadlines (plural) in eligibility prompts

--- a/home/templates/home/snippet/eligibility_prompts.html
+++ b/home/templates/home/snippet/eligibility_prompts.html
@@ -222,7 +222,7 @@
 				<p class="card-text">
 				Interested in applying to another project?
 				You'll need to record a contribution for a project in order to be eligible to create a final application.
-				You can see the full list of projects and their deadlines on the
+				You can see the full list of projects on the
 				<a href="{% url 'project-selection' %}">project selection page</a>.
 				</p>
 			{% endif %}
