--- a/home/templates/home/promote.html
+++ b/home/templates/home/promote.html
@@ -87,7 +87,11 @@ Call for Outreachy community coordinators and mentors
 
 <p>Each round, Outreachy has a Twitter chat to introduce the program. We have questions for both mentors and alums. Potential Outreachy applicants are welcome to ask questions of mentors and interns after the chat.</p>
 
-<p>The next #OutreachyChat will be on Monday, March 4, 2019 at 4pm UTC / 8am PDT / 11pm EDT / 5pm CET / 9:30pm IST.</p>
+{% if current_round %}
+<p>The next #OutreachyChat will be on {{ current_round.outreachy_chat }} UTC / 8am PDT / 11pm EDT / 5pm CET / 9:30pm IST.</p>
+{% else %}
+<p>The next #OutreachyChat is not scheduled yet. It's typically run two weeks after the initial application period opens, on a Monday at 4pm UTC / 8am PDT / 11pm EDT / 5pm CET / 9:30pm IST.</p>
+{% endif %}
 
 <p>Here is how the chat will work for mentors and alums:</p>
 
