Add internship period to the mentor timeline

--- a/home/templates/home/snippet/mentor-timeline.html
+++ b/home/templates/home/snippet/mentor-timeline.html
@@ -8,4 +8,5 @@
 	<tr><td><b>{{ current_round.mentor_intern_selection_deadline }}</b></td><td>Intern selection deadline</td></tr>
 	<tr><td><b>{{ current_round.internapproval }}</b></td><td>Outreachy organizers finalize intern selections</td></tr>
 	<tr><td><b>{{ current_round.internannounce }} at 4pm UTC</b></td><td>Interns are publicly announced on <a href="/alums/">the alums page</a></td></tr>
+	<tr><td><b>{{ current_round.internstarts }}<br> to {{ current_round.internends }}</b></td><td>Internships period</td></tr>
 </table>
