Add timezone to #OutreachyChat date in timelines

--- a/home/templates/home/snippet/mentor-timeline.html
+++ b/home/templates/home/snippet/mentor-timeline.html
@@ -1,7 +1,7 @@
 <table class=table>
 	<tr><td width="175"><b>{{ current_round.pingnew }} at 4pm UTC</b></td><td>Community sign up opens</td></tr>
 	<tr><td><b>{{ current_round.lateorgs }} at 4pm UTC</b></td><td>Deadline for community sign up</td></tr>
-	<tr><td><b>{{ current_round.outreachy_chat }}</b></td><td><a href='{% url 'promote' %}#outreachychat'>#OutreachyChat on Twitter</a></td></tr>
+	<tr><td><b>{{ current_round.outreachy_chat }} UTC</b></td><td><a href='{% url 'promote' %}#outreachychat'>#OutreachyChat on Twitter</a></td></tr>
 	<tr><td><b>{{ current_round.project_soft_deadline }} at 4pm UTC</b></td><td>Mentor project submission deadline</td></tr>
 	<tr><td><b>{{ current_round.contributions_open }}</b></td><td>Contribution period begins</td></tr>
 	<tr><td><b>{{ current_round.contributions_close }} at 4pm UTC</b></td><td>Final application deadline</td></tr>
