--- a/home/templates/home/dashboard/email/internship-week-11.html
+++ b/home/templates/home/dashboard/email/internship-week-11.html
@@ -1,4 +1,4 @@
-<p>Week 11: Topic is "Making connections." Make sure the <a href="{{ current_round.week_twelve_interviewing_chat_url }}">Outreachy topic URL</a> is created for the discussion on {{ current_round.week_ten_chat_text_date }}. Make sure to set this round's resume reviewer name and email in the Django admin console. Send another blog post prompt:
+<p>Week 11: Topic is "Making connections." Make sure the <a href="{{ current_round.week_twelve_interviewing_chat_url }}">Outreachy topic URL</a> is created for the discussion on {{ current_round.week_twelve_chat_text_date }} UTC. Make sure to set this round's resume reviewer name ({{ current_round.resume_reviewer_name }}) and email &lt;{{ current_round.resume_reviewer_email }}&gt; in the Django admin console. Send another blog post prompt:
 <ul>
 	<li>Send the email after {{ due }}.</li>
 </ul>
