Have essay tips in both applicant guide and essay page in initial application.
Add a collapsible section for essay tips in the initial application.

Remove sentence about not needing to explain racism. It may be necessary
in some less common cases.

--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -140,54 +140,7 @@ Applicant Guide | Outreachy Documentation
 
 <p id='essay-tips'><b>Essay Tips</b></p>
 
-<p>
-Two questions ask about the discrimination you face in your learning environment or while building your skills.
-We are <b>not</b> asking you to provide details about your completed classes, your educational background, or what skills you have.
-We are asking you to talk about about the <b>discrimination</b> you face in your learning environment or while building your skills.
-</p>
-
-<p>
-When talking about the discrimination you face, assume the reader lives in a different culture than you.
-Provide background about your culture, including links to articles or blogs if needed.
-</p>
-
-<p>
-If you mention that you face discrimination, say which marginalized group(s) you are a part of.
-You may need to mention the university, town, region, or country where you live or went to school.
-You may need to provide statistics about why your group is in the minority in that area.
-</p>
-
-<p>Unclear: "I face religious discrimination"<br>
-Clear: "I am a Muslim in France. Muslims make up less than 2.3% of France's population. I face religious discrimination."
-</p>
-
-<p>
-Provide specific examples of the discrimination you have faced.
-Provide a short summary of what happened.
-Talk about how the discrimination you faced impacts your education or career.
-Discrimination could be impacting you today or you may worry it will impact you in the future.
-</p>
-
-<p>
-We do not want writing an essay to re-traumatize survivors of violence and oppression.
-There is no need to share detailed descriptions of sexual harassment or assault.
-You do not need to share the details of why you are a refugee.
-If you face racism, you don't need to repeat the exact discriminatory comments you have heard.
-Instead, state that you face this type of discrimination, specify who is discriminating against you, and how it impacts your education or career.
-</p>
-
-<p>
-One essay question refers to "the technology industry of your country".
-We want to know about the technology industry in the country you will be living in during the internship.
-Talk about the discrimination you face in that country's technology industry, not in the international technology industry.
-</p>
-
-<p>
-Please do not put personal contact information in your essays.
-We do not require references and will not follow up with references.
-Please do not put links to your resume in your essays.
-We do not read resumes.
-</p>
+{% include 'home/docs/essay-tips-snippet.html' %}
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <h2 id='application-prep'><a href="#application-prep">Preparing for the contribution period</a></h2>
