Clarify essay exception for survivors of violence

--- a/home/templates/home/docs/essay-tips-snippet.html
+++ b/home/templates/home/docs/essay-tips-snippet.html
@@ -37,7 +37,7 @@ Discrimination could be impacting you today or you may worry it will impact you 
 </p>
 
 <p>
-We do not want writing an essay to re-traumatize survivors of violence and oppression.
+We do not want writing an essay to re-traumatize survivors of violence.
 There is no need to share detailed descriptions of sexual harassment or assault.
 You do not need to share the details of why you are a refugee.
 Instead, state that you face this type of discrimination, specify who is harassing or discriminating against you, and how it impacts your education or career.
