Fix round date display in application pending message

--- a/home/templates/home/eligibility_results.html
+++ b/home/templates/home/eligibility_results.html
@@ -191,7 +191,7 @@ Outreachy eligibility results
        	We may follow up with additional questions for you via email.
 	</p>
 	<p>
-	All accepted applicants will recieve an email notification by {{ current_round.contributions_open }}.
+	All accepted applicants will recieve an email notification by {{ role.current_round.contributions_open }}.
 	Accepted applicants will then move onto the contribution phase. During the contribution phase, applicants make contributions to Outreachy projects.
 	</p>
 	<p>
