Correct application date display on eligibility results page

--- a/home/templates/home/eligibility_results.html
+++ b/home/templates/home/eligibility_results.html
@@ -198,7 +198,7 @@ Outreachy eligibility results
 	We encourage you to <a href='{% url 'docs' %}'>read our applicant and internship documentation</a> while you're waiting for your initial application results.
 	</p>
 	<p>
-	You submitted your application on {{ application.submission_date }}.
+	You submitted your application on {{ role.application.submission_date }}.
 	</p>
 	<p>You will not be able to record contributions or make a final application until your initial application has been approved.
 	Do not try to contact mentors or community coordinators until your initial application has been approved.</p>
