Fix Typo "enourages" -> "encourages"

--- a/home/templates/home/project_skills_form.html
+++ b/home/templates/home/project_skills_form.html
@@ -27,7 +27,7 @@ specific about what skills applicants need in order to apply versus what
 skills are optional, applicants may decide they "aren't qualified" when
 they are. Applicants with imposter syndrome will often believe they need
 to be an "expert" in a particular skill in order to apply. Listing
-skills this way enourages people to apply.</p>
+skills this way encourages people to apply.</p>
 
 <p>Please do not list more than one skill in the skill description.</p>
 
