Applicants can ask questions during and after the Outreachy Chat

--- a/home/templates/home/promote.html
+++ b/home/templates/home/promote.html
@@ -85,7 +85,7 @@ Call for Outreachy community coordinators and mentors
 
 <h1 id="outreachychat">#OutreachyChat</h1>
 
-<p>Each round, Outreachy has a Twitter chat to introduce the program. We have questions for both mentors and alums. Potential Outreachy applicants are welcome to ask questions of mentors and interns after the chat.</p>
+<p>Each round, Outreachy has a Twitter chat to introduce the program. We have questions for both mentors and alums. Potential Outreachy applicants are encouraged to ask questions of mentors and alums during and after the chat.</p>
 
 {% if current_round %}
 <p>The next #OutreachyChat will be on {{ current_round.outreachy_chat }} UTC / 9 am PDT / 12 pm EDT / 6 pm CET / 9:30 pm IST.</p>
