Add Gatsby job page to opportunities page

--- a/home/templates/home/opportunities.html
+++ b/home/templates/home/opportunities.html
@@ -60,6 +60,7 @@ Outreachy | Opportunities with Sponsors - Outreachy
             <h3>2</h3>
             <ul>
                 <li><p><a href="https://www.digitalocean.com/company/careers/">DigitalOcean</a>  </p></li>
+                <li><p><a href="https://www.gatsbyjs.com/careers/">Gatsby</a></p></li>
                 <li><p><a href="https://www.ffmpeg.org/">FFmpeg</a>  </p></li>
                 <li><p><a href="https://mapzen.com/jobs">Mapzen</a> (OpenStreetMap jobs)  </p></li>
                 <li><p><a href="https://owncloud.com/jobs">ownCloud</a>  </p></li>
